--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "matplotlib>=3.7.4",
     "scipy>=1.10.1",
     "pyarrow>=15.0.0",
+    "pint>=0.21.1",
 ]
 requires-python = ">= 3.8"
 license = { text = "MIT" }
@@ -31,6 +32,7 @@ managed = true
 dev-dependencies = [
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
+    "ruff>=0.2.1",
 ]
 
 [tool.rye.scripts]
