--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,15 @@ dev-dependencies = [
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
     "ruff>=0.2.1",
+    "mkdocs>=1.5.3",
+    "mkdocs-material>=9.5.9",
+    "mkdocstrings[python]>=0.24.0",
 ]
 
 [tool.rye.scripts]
 test = "pytest"
 test_cov = "pytest --cov --cov-report xml"
+docs = "mkdocs"
 
 [tool.hatch.metadata]
 allow-direct-references = true
