--- a/.github/workflows/package_testing.yml
+++ b/.github/workflows/package_testing.yml
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
 
 env:
-  MAIN_PYTHON_VERSION: "3.12"
+  MAIN_PYTHON_VERSION: "3.14"
 
 jobs:
   # Build and test
@@ -18,25 +18,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v4
-    - name: Install the latest version of rye
-      uses: eifinger/setup-rye@v1
-    - name: Sync Rye
+      uses: actions/checkout@v5
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Pin and sync
       run: |
-        rye pin ${{ matrix.python-version }}
-        rye sync
-    - name: Run Tests for python interface
-      run: rye run test
+        uv python pin ${{ matrix.python-version }}
+        uv sync --all-extras --dev
+    - name: Run tests
+      run: uv run pytest
     - name: Run Lint on one python
       if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION }}
-      run: rye lint
+      run: uv run ruff check
     - name: Run Pytest with coverage
       if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION }}
-      run: |
-        rye run test_cov
+      run: uv run pytest --cov --cov-report xml
     - name: Upload coverage reports to Codecov
       if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION && github.repository_owner == 'trappitsch' }}
       uses: codecov/codecov-action@v3
