--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 authors = [
     { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
 ]
+
 dependencies = [
     "iniabu>=1.1.2",
     "numpy>=1.24.4",
@@ -15,21 +16,11 @@ dependencies = [
     "pyarrow>=15.0.0",
     "pint>=0.21.1",
 ]
-requires-python = ">= 3.8"
+requires-python = ">= 3.10"
 license = { text = "MIT" }
 
-[project.scripts]
-
-[project.urls]
-Homepage = "https://github.com/trappitsch/rttools"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
     "ruff>=0.2.1",
@@ -38,10 +29,12 @@ dev-dependencies = [
     "mkdocstrings[python]>=0.24.0",
 ]
 
-[tool.rye.scripts]
-test = "pytest"
-test_cov = "pytest --cov --cov-report xml"
-docs = "mkdocs"
+[project.urls]
+Homepage = "https://github.com/trappitsch/rttools"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.hatch.metadata]
 allow-direct-references = true
