--- a/.github/workflows/doc_release.yml
+++ b/.github/workflows/doc_release.yml
@@ -16,9 +16,8 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
       - uses: actions/cache@v4
         with:
@@ -27,6 +26,7 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: |
-          pip install .[dev]
-      - run: mkdocs gh-deploy --force
+          uv python install
+          uv sync --all-extras --dev
+      - run: uv run mkdocs gh-deploy --force
 
